# gb-io

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: test.yml
benches/: parse.rs
examples/: feature_extract.rs
examples/parse_genbank/: Cargo.toml
examples/parse_genbank/src/: main.rs
examples/revcomp/: Cargo.toml
examples/revcomp/src/: main.rs
src/: dna.rs  errors.rs  lib.rs  seq.rs  writer.rs
src/reader/: errors.rs  feature_table.rs  field.rs  location.rs  locus.rs  misc.rs  mod.rs  nom_parsers.rs  stream_parser.rs  streaming_parser.rs
tests/: circ.gb
