[package]
edition = "2018"
name = "gb-io"
version = "0.6.0"
license = "MIT"
authors = ["David Leslie"]
homepage = "https://github.com/dlesl/gb-io"
repository = "https://github.com/dlesl/gb-io"
description = "A library for parsing, writing and manipulating Genbank sequence files"
build = "build.rs"
exclude = ["tests/*"]

[build-dependencies]
string_cache_codegen = "0.5.1"

[dependencies]
itertools = "0.9.0"
circular = "0.3.0"
err-derive = "0.2.3"
string_cache = "0.8.0"
log = "0.4"
nom = "4.2.3"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_bytes = {version = "0.11", optional = true }
bio = "0.30.0"

[features]
default = ["serde", "serde_bytes"]

[dev-dependencies]
glob = "0.3.0"
bencher = "0.1.5"
env_logger = "0.7.1"

[[bench]]
name = "parse"
harness = false
