[package]
edition = "2021"
name = "gb-io"
version = "0.7.1"
license = "MIT"
authors = ["David Leslie"]
homepage = "https://github.com/dlesl/gb-io"
repository = "https://github.com/dlesl/gb-io"
description = "A library for parsing, writing and manipulating Genbank sequence files"
build = "build.rs"
exclude = ["tests/*", ".github/*"]

[build-dependencies]
string_cache_codegen = "0.5"

[dependencies]
itertools = "0.11"
circular = "0.3.0"
thiserror = "2.0.0"
string_cache = "0.8"
log = "0.4"
nom = "8.0.0"
serde = { version = "1", optional = true, features = ["derive"] }
serde_bytes = { version = "0.11", optional = true }

[features]
default = ["serde", "serde_bytes"]

[dev-dependencies]
glob = "0.3.0"
bencher = "0.1.5"
env_logger = "0.10.0"

[[bench]]
name = "parse"
harness = false

[profile.release]
lto = true # keeps performance on-par with nom 4 (macro-based)
