[package]
edition = "2021"
name = "gb-io"
version = "0.9.0"
license = "MIT"
authors = ["David Leslie"]
homepage = "https://github.com/dlesl/gb-io"
repository = "https://github.com/dlesl/gb-io"
description = "A library for parsing, writing and manipulating Genbank sequence files"
exclude = ["tests/*", ".github/*"]

[dependencies]
itertools = "0.14"
circular = "0.3.0"
thiserror = "2"
log = "0.4"
nom = "8"
serde = { version = "1", optional = true, features = ["derive"] }
serde_bytes = { version = "0.11", optional = true }

[features]
serde = ["dep:serde", "dep:serde_bytes"]

[dev-dependencies]
glob = "0.3"
bencher = "0.1.5"
env_logger = "0.11"

[[bench]]
name = "parse"
harness = false

[profile.release]
lto = true # keeps performance on-par with nom 4 (macro-based)
